Feat: Profile, user image functionality added
